--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,3 +17,82 @@
 *::-webkit-scrollbar-track {
     background: #1a1b1f;
 }
+
+
+button{
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    padding: 8px 16px;
+    user-select: none;
+    text-shadow: 0 2px 2px #201d01;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 2px 0px 8px -2px #7aa2b0;
+    -moz-box-shadow: 2px 0px 8px -2px #7aa2b0;
+    box-shadow: 2px 0 8px -2px #7aa2b0;
+    background: #8dc6de;
+    color: #fff;
+    font-weight: bold;
+    background: #8dc6de;
+    transition-duration: .3s;
+    transition-timing-function: ease-out;
+    background: -webkit-linear-gradient(45deg,#9f9e92,#d6d5ba);
+    background: linear-gradient(45deg,#9f9e92,#d6d5ba);
+}
+
+button:hover {
+    text-decoration: none;
+    -webkit-box-shadow: 2px 0px 8px -2px #7aa2b0;
+    -moz-box-shadow: 2px 0px 8px -2px #7aa2b0;
+    box-shadow: 2px 0 8px -2px #7aa2b0;
+    background: #8dc6de;
+    background: -webkit-linear-gradient(45deg,#d6d5ba,#9f9e92);
+    background: linear-gradient(45deg,#d6d5ba,#9f9e92);
+}
+
+button:active{
+    position: relative;
+    top: 1px;
+    color: #fff;
+    -webkit-box-shadow: 2px 0px 8px -2px #7aa2b0;
+    -moz-box-shadow: 2px 0px 8px -2px #7aa2b0;
+    box-shadow: 2px 0 8px -2px #7aa2b0;
+    background: #8dc6de;
+    background: -webkit-linear-gradient(45deg,#9f9e92,#9f9e92);
+    background: linear-gradient(45deg,#9f9e92,#9f9e92);
+}
+
+
+.input{
+    display: flex;
+    align-items: center;
+    border: 1px solid #5d594a;
+    padding: 8px;
+    border-radius: 4px;
+    width: 100%;
+    -webkit-box-shadow: inset 0px 2px 8px -2px #c6c3a2;
+    -moz-box-shadow: inset 0px 2px 8px -2px #c6c3a2;
+    box-shadow: inset 0 2px 8px -2px #c6c3a2;
+}
+
+.input.active{
+  border: 1px solid #4a595d;
+  box-shadow:inset 0 2px 8px -2px #5d5a4a;
+}
+
+.input input{
+  flex: 1;
+    border: 0;
+    width: 100%;
+    background: transparent;
+}
+
+.input input:focus{
+  outline:none;
+
+}
