--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,7 +77,7 @@ button:active{
     width: 100%;
     -webkit-box-shadow: inset 0px 2px 8px -2px #c6c3a2;
     -moz-box-shadow: inset 0px 2px 8px -2px #c6c3a2;
-    box-shadow: inset 0 2px 8px -2px #c6c3a2;
+    box-shadow: inset 0px 0px 15px #121313;
 }
 
 .input.active{
