--- a/src/css/main.css
+++ b/src/css/main.css
@@ -95,3 +95,15 @@ button:active{
   outline:none;
 
 }
+
+
+
+
+
+html,body{
+
+    width:100%;
+    height:100%;
+    margin:0;
+    overflow: hidden;
+}
